--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
     border-bottom: 8px solid rgb(65, 81, 226);
     border-top: 8px solid rgb(3, 14, 116);
     border-radius: 5px;
+    height: 75vh;
 }
 
 .placement {
@@ -29,7 +30,8 @@ body {
 
 #game {
     display: none;
-    width: 800px;
+    width: 1000px;
+    /* width: 800px; */
     margin-left: 280px;
     margin-top: 35px;
 }
@@ -109,7 +111,9 @@ body {
     border-radius: 10px;
     width: 270px;
     position: absolute;
-    bottom: 190px;
+    /* bottom: 190px; */
+    top: 50%;
+    left: 20%;
 }
 
 .B {
@@ -120,8 +124,9 @@ body {
     border-radius: 10px;
     width: 270px;
     position: absolute;
-    bottom: 190px;
-    left: 605px;
+    /* bottom: 150px; */
+    top: 50%;
+    left: 50%;
 }
 
 .C {
@@ -133,7 +138,9 @@ body {
     border-radius: 10px;
     width: 270px;
     position: absolute;
-    bottom: 140px;
+    /* bottom: 100px; */
+    top: 65%;
+    left: 20%;
 }
 
 .D {
@@ -144,8 +151,10 @@ body {
     border-radius: 10px;
     width: 270px;
     position: absolute;
-    bottom: 140px;
-    left: 605px;
+    /* bottom: 100px; */
+    top: 65%;
+    /* left: 605px; */
+    left: 50%;
 }
 
 .options span:hover {
